Resolves: tdf#125348 some an initial fixed width for the treeview

the final width will be determined by the width of the entry boxes above it

Change-Id: Ifcac2a2ef220cbacf5cd0ef6531e4a04e10a7326
Reviewed-on: https://gerrit.libreoffice.org/72989
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
Reviewed-on: https://gerrit.libreoffice.org/73020
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>